src-tauri/crates/onecad-core/tests/snapshots/schema_freeze__operation_revolve_with_region_anchor.snap
---
source: crates/onecad-core/tests/schema_freeze.rs
expression: rec
---
{
  "recordId": "00000000-0000-0000-0000-000000002ed7",
  "recordSchemaVersion": 1,
  "stepIndex": 23,
  "name": "Revolve anchored",
  "opType": "Revolve",
  "params": {
    "angleDeg": {
      "value": 360.0
    },
    "axis": {
      "kind": "sketchLine",
      "lineId": "00000000-0000-0000-0000-00000000e001",
      "sketchId": "00000000-0000-0000-0000-000000005c01"
    },
    "booleanMode": "NewBody",
    "profile": {
      "regionAnchor": [
        12.0,
        8.0
      ],
      "regionId": "r0",
      "sketchId": "00000000-0000-0000-0000-000000005c01"
    }
  },
  "inputs": {
    "bodies": [],
    "sketches": [
      "00000000-0000-0000-0000-000000005c01"
    ],
    "elements": []
  },
  "outputs": [
    "00000000-0000-0000-0000-00000000b0d1"
  ],
  "determinism": {
    "parallel": false,
    "occtOptionsHash": "cbf29ce484222325",
    "tolerancePolicyHash": "b2c9000000000000",
    "solverPolicyHash": "3e9a000000000000"
  },
  "suppressed": false
}
